# ChatSystem

./: .gitignore
ChatServer/: CMakeLists.txt  Dockerfile
ChatServer/include/: AsioIOServicePool.h  MysqlDao.h  RedisMgr.h  const.h
ChatServer/src/: AsioIOServicePool.cpp  CServer.cpp  ChatGrpcClient.cpp  ChatServer.cpp  ConfigMgr.cpp  config.ini
ChatServer2/: CMakeLists.txt
ChatServer2/include/: CServer.h  ChatGrpcClient.h  Log.h  RedisMgr.h  util.h
ChatServer2/src/: CSession.cpp  Log.cpp  LogicSystem.cpp  MysqlDao.cpp  RedisMgr.cpp  config.ini  util.cpp
GateServer/: CMakeLists.txt  Dockerfile
GateServer/include/: AsioIOServicePool.h  CServer.h  ConfigMgr.h  HttpConnection.h  Log.h  LogicSystem.h  MysqlDao.h  MysqlMgr.h  RedisMgr.h  Singleton.h  StatusGrpcClient.h  VarifyGrpcClient.h  const.h
GateServer/src/: AsioIOServicePool.cpp  CServer.cpp  ConfigMgr.cpp  HttpConnection.cpp  LogicSystem.cpp  MysqlDao.cpp  MysqlMgr.cpp  RedisMgr.cpp  StatusGrpcClient.cpp  config.ini  main.cpp  message.proto
StatusServer/: CMakeLists.txt  Dockerfile  generate_grpc.sh
StatusServer/include/: ChatGrpcClient.h  Log.h  RedisMgr.h  Singleton.h  StatusServiceImpl.h  const.h
StatusServer/src/: ChatGrpcClient.cpp  RedisMgr.cpp  StatusServer.cpp  StatusServiceImpl.cpp  config.ini
VarifyServer/: Dockerfile  config.js  config.json  const.js  email.js  package-lock.json  proto.js  redis.js  server.js
